--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,12 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:26.1.0'
+    compile "com.android.support:support-emoji-appcompat:26.1.0"
+    compile "com.android.support:support-emoji:26.1.0"
+    compile "com.android.support:support-emoji-bundled:26.1.0"
+
+
     compile 'com.google.android.gms:play-services-vision:11.6.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
