--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-        android:name=".ProjectVision"
+        android:name=".ProjectVisionApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -32,16 +32,17 @@
             android:screenOrientation="fullSensor">
         </activity>
         <activity
+            android:name=".faceDetection.faceDetails.FaceTrackerActivity"
+            android:label="Face Tracker"
+            android:screenOrientation="fullSensor"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+        </activity>
+        <activity
             android:name=".barcodeDetection.BarCodeActivity"
             android:label="BarCode">
         </activity>
         <activity
             android:name=".textDetection.TextDetectionActivity"
             android:label="TextDetection"/>
-        <activity
-            android:name=".faceDetection.faceDetails.FaceTrackerActivity"
-            android:label="Face Tracker"
-            android:screenOrientation="fullSensor"
-            android:theme="@style/Theme.AppCompat.NoActionBar"/>
     </application>
 </manifest>
